--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
   },
   "homepage": "https://github.com/wgnrgoncalves/herokutest#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "faker": "^4.1.0",
+    "jwt-simple": "^0.5.1",
+    "passport": "^0.4.0"
   },
   "engines": {
     "node": "8.10.0"
