--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/wgnrgoncalves/herokutest#readme",
   "dependencies": {
+    "angular": "^1.7.5",
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.3",
